--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
+  "name": "better-with-age",
   "version": "1.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "A site for cheese lovers",
   "engines": {
     "node": ">= 7.0.0"
   },
