--- a/package.json
+++ b/package.json
@@ -62,7 +62,12 @@
     "enzyme-adapter-react-16": "^1.0.0",
     "eslint": "^4.10.0",
     "eslint-config-fullstack": "^3.0.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.3.0",
     "nodemon": "^1.12.1",
     "react-test-renderer": "^16.0.0",
