--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.5.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-grid-system": "^3.1.2",
     "react-redux": "^5.0.2",
     "react-responsive-carousel": "^3.1.30",
     "react-router-dom": "^4.1.1",
