--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.16.1",
+    "chance": "^1.0.13",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
     "css-loader": "^0.28.8",
